29_受講生情報登録処理の実装　課題3